completed reducing function

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
         </div>
 
         <div id="matrixInputted">
-          <button type="submit" value="submit" onclick="return reduceMatrix();">
+          <button type="button" value="submit" onclick="return reduceMatrix();">
             Reduce Matrix
           </button>
           <br>
           <input type="reset" name="reset numbers"/>
         </div>
 
-        <div id="table"> </div>
+        <div id="matrixTable"> </div>
       </form>
 
     </div>
