--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>4x4 Matrix Reducer</h1>
 
   <body>
-    <p title= "background information">
+    <p title= "background information" id="description">
       To reduce your matrix into Reduced Row Echelon Form (RREF),
       simply input your values below!
     </p>
@@ -20,7 +20,7 @@
     <div id="matrixInputting">
       <form id="matrixInputs" method="post">
 
-        <div id="raw-values">
+        <div id="rawValues">
           <input type="text" id="e1x1"/>
           <input type="text" id="e1x2"/>
           <input type="text" id="e1x3"/>
